--- a/css/styles.css
+++ b/css/styles.css
@@ -1,20 +1,52 @@
 body{
   font-family: 'Raleway';
+  background-color: #EFEFEF;
 }
-#header{
-  text-align: right;
-  padding-top: 60px;
-  border-bottom-style: solid;
-  border-bottom-width: 5px;
-  border-bottom-color: #008080;
-}
-#hero{
-  padding-top: 5px;
-  max-width: 100%;
-  float: left;
+.hero{
+  background-image: url('../images/Macbook.jpeg');
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+  color: white;
+  display: flex;
+  flex-direction: column;
 
+  align-items: center;
+  justify-content: center;
 }
-
+.intro{
+  color: black;
+  justify-content: center;
+  align-content: center;
+  width: 200px;
+}
+.container-fluid{
+  background-color: #EFEFEF;
+}
+.skill-section{
+  display: grid;
+  grid-template-columns: repeat(4,4fr);
+  grid-template-rows: repeat(3, auto);
+  grid-gap: 5px;
+}
+.skill{
+  background-color: #393E46;
+  color: white;
+  font-size: 1.75em;
+  display: block;
+  text-align: center;
+  border: 2px solid grey;
+  border-radius: 5px;
+}
+.grow:hover
+{
+        -webkit-transform: scale(1.3);
+        -ms-transform: scale(1.3);
+        transform: scale(1.3);
+}
+.color:hover{
+  background: #70D4B4 ;
+}
 #logo{
     height: 72px;
     margin-right: 1em;
@@ -24,7 +56,11 @@ body{
 }
 .headers{
   text-decoration-line: underline;
-  text-decoration-color:#008080;
+  text-decoration-color:#70D4B4;
+}
+.btn{
+  background-color: #70D4B4 !important;
+  border: #70D4B4 !important;
 }
 .card-deck{
   display: flex;
@@ -33,7 +69,8 @@ body{
   margin-right: 5px;
   margin-bottom: 5px;
   text-align: center;
-  color: black;
+  color: white;
+  background-color:#393E46 !important;
 }
 .card-img-top{
   padding-right: -15px;
