--- a/css/styles.css
+++ b/css/styles.css
@@ -15,12 +15,11 @@ body{
   align-items: center;
   justify-content: center;
 }
-.link{
-}
+
 .footer{
   font-size: 1.5em;
   background-color: inherit;
-  display: flex;
+  display: flex !important;
   flex-direction: column;
   align-items: center;
   justify-content: center;
