Update: Link Colors

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,9 @@ body{
   font-family: 'Raleway';
   background-color: #EFEFEF;
 }
+a:link{
+  color: #70D4B4;
+}
 
 .hero{
   background-image: url('../images/Macbook.jpeg');
