--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,7 @@ body{
 }
 .skill-section{
   display: grid;
-  grid-template-columns: repeat(4,4fr);
+  grid-template-columns: repeat(4,auto);
   grid-template-rows: repeat(3, auto);
   grid-gap: 5px;
 }
